--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		"lint": "bunx biome lint ./",
 		"check": "bunx biome check --write ./",
 		"type-check": "tsc --noEmit",
-		"type-check:watch": "tsc --noEmit --watch"
+		"type-check:watch": "tsc --noEmit --watch",
+		"pages:build": "bunx @cloudflare/next-on-pages",
+		"preview": "bun pages:build && wrangler pages dev",
+		"deploy": "bun pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
 		"class-variance-authority": "^0.7.1",
@@ -26,12 +29,14 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@cloudflare/next-on-pages": "^1.13.7",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"lefthook": "^1.10.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"typescript": "^5",
+		"wrangler": "^3.99.0"
 	}
 }
