--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"deploy": "bun pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.469.0",
