--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"deploy": "bun pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
+		"@octokit/graphql": "^8.1.1",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
 		"class-variance-authority": "^0.7.1",
