--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"lucide-react": "^0.469.0",
 		"next": "15.1.2",
 		"next-auth": "^5.0.0-beta.25",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
